Fix z-index of commsy navigation

--- a/app/Resources/assets/uikit-commsy/custom/navigation.less
+++ b/app/Resources/assets/uikit-commsy/custom/navigation.less
@@ -12,7 +12,6 @@
     -moz-box-shadow: inset -10px 0px 5px 0px rgba(0,0,0,0.3);
     box-shadow: inset -10px 0px 5px 0px rgba(0,0,0,0.3);
     white-space: nowrap;
-    z-index: 9999;
 }
 @media (max-width: 1300px) {
     #commsy_navigation {
